--- a/index.html
+++ b/index.html
@@ -1,29 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap"
+      rel="stylesheet"
+    />
     <title>Otarea</title>
-</head>
-<body>
+  </head>
+
+  <body>
     <header>
-        <nav>
-           <div class="nav-left">
-            <img id="logo" src="Group 23.png" alt="Otarea">
-            <img id="line" src="Line 1.png" alt="line">
-            <a href="#">Blog</a>
-           </div>
-        </nav>
-    </header>
-    <main>
-        <div class="m-body">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum doloribus praesentium voluptate consequatur eius, atque recusandae iste accusantium libero voluptates numquam illum cupiditate. Quasi vitae quae eos maiores velit itaque aliquam rem praesentium ut?</p>
+      <nav>
+        <div class="nav-left">
+          <img src="Group 23.png" alt="Otarea" />
+          <div class="verticle-line"></div>
+          <p>Blog</p>
         </div>
-    </main>
+        <div class="nav-right">
+          <ul>
+            <li><img src="Polygon 1.png" /><a href="#">Archeives</a></li>
+            <li><img src="cart.png" /><a href="#">Stores</a></li>
+          </ul>
+          <button>Get a Quote</button>
+        </div>
+      </nav>
+    </header>
+    <section id="hero">
+      <div class="hero-left">
+        <h1>Let’s Explore <br />New Possibilities...</h1>
+        <div id="search-button">
+          <div>
+            <img src="search.png" />
+            <input
+              type="text"
+              id="search"
+              name="search"
+              placeholder="How to, etc.."
+            />
+          </div>
+          <button>Search</button>
+        </div>
+        <div id="hashtags">
+          <ul>
+            <li>#Design</li>
+            <li>#Develope</li>
+            <li>#Market</li>
+          </ul>
+        </div>
+      </div>
+      <img src="Group.png" />
+    </section>
+    <section id="blog">
+      <img src="Rectangle 31.png" />
+      <div id="blog-body">
+        <h1>Latest post heading sample tex..</h1>
+        <div>
+          <p>By Writter Name</p>
+          <p>23 Dec.</p>
+        </div>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident.
+        </p>
+      </div>
+    </section>
+    <section id="cards">
+      <div id="card">
+        <img src="Rectangle 15.png" />
+        <div id="card-body">
+          <h1>Other post heading sample tex...</h1>
+          <div>
+            <p>By Writter Name</p>
+            <p>23 Dec.</p>
+          </div>
+          <p>
+            “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.”
+          </p>
+          <a href="#">See full</a>
+        </div>
+      </div>
+      <div id="card">
+        <img src="Rectangle 15.png" />
+        <div id="card-body">
+          <h1>Other post heading sample tex...</h1>
+          <div>
+            <p>By Writter Name</p>
+            <p>23 Dec.</p>
+          </div>
+          <p>
+            “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.”
+          </p>
+          <a href="#">See full</a>
+        </div>
+      </div>
+      <div id="card">
+        <img src="Rectangle 15.png" />
+        <div id="card-body">
+          <h1>Other post heading sample tex...</h1>
+          <div>
+            <p>By Writter Name</p>
+            <p>23 Dec.</p>
+          </div>
+          <p>
+            “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.”
+          </p>
+          <a href="#">See full</a>
+        </div>
+      </div>
+    </section>
     <footer>
-        <p>Copyrights &copy; reserved by Otarea</p>
+      <div>
+        <h1>
+          <span style="font-size: 40px; font-weight: 300;">Download</span><br>
+          <span style="font-size: 47px; font-weight: 500;">Otarea Educore App </span><br>
+          <span style="font-size: 33px; font-weight: 400;">For non stop learning</span>
+        </h1>
+        <button>Download Now</button>
+      </div>
+      <img src="Group (1).png" />
     </footer>
-</body>
+  </body>
 </html>
